[package]
name = "instance-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.9"
tokio = { version = "1.42.0", features = ["full"] }
sysinfo = "0.26"
hostname = "0.4.0"
thiserror = "1.0"
dashmap = "6.1.0"
log = "0.4.22"
env_logger = "0.11.6"
clap = { version = "4.5.23", features = ["derive"] }
